--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       </body>
       <hr>
 
-      <h1>>>Guide<<</h1>
+      <h1 id="section1">>>Guide<<<</h1>
 
       <a href="https://rezka.ag/" target="_blank">   Free-High-Quality-PirateWebSite  </a>
 
@@ -22,7 +22,7 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/jAy6NJ_D5vU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>salam</iframe>
 
 <p> FREE JAHREIN</p>
- <iframe width="560" height="315" src="https://youtu.be/eQSTf8E43eI?si=dc13Yuawso5clklX" frameborder="0" allow="allowfullscreen; autoplay; clipboard-write; encrypted-media; gyroscope picture" allowfullscreen>xello</iframe>
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/eQSTf8E43eI" frameborder="0" allow="allowfullscreen; autoplay; clipboard-write; encrypted-media; gyroscope picture" allowfullscreen>xello</iframe>
 
 
  <p>Services For Movie Review and Critisizing</p>
@@ -30,18 +30,13 @@
 <ul>
   <li><a href="https://www.imdb.com/" target="_blank">IMDB</a></li>
   <li><a href="https://www.rottentomatoes.com/" target="_blank">Rotten Tomatoes</a></li>
-  <li></li>
+  <li><a href="https://www.metacritic.com/" target="_blank">MetaCritics</a></li>
 </ul>
 
-    <ol>
-      <li>First item</li>
-      <li>Second item</li>
-      <li>Third item</li>
-    </ol>
 
 <a href="#section1"> section 1 e kecid edin</a>
 <br>
-<h1 id="section1">salamlar</h1>
+<h1 id="section2">salamlar</h1>
 <p>privet brat</p>
 
 <html>
